--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <p style="color: gray;">copyright @antarkalia</p>
+        <p style="color: gray;">copyright @antaryami</p>
     </div>
     <script>
 
